// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcSmartTableHeading should not render the title if title prop was not given 1`] = `
<div>
  <!---->
   
  <!---->
</div>
`;

exports[`EcSmartTableHeading should render given filter and header-actions slots 1`] = `
<div>
  <div
    class="ec-smart-table-heading-title"
  >
    Random Title
  </div>
   
  <div
    class="ec-smart-table-heading"
  >
    <div
      class="ec-smart-table-heading__filter"
    >
      <div>
        Custom filter
      </div>
    </div>
     
    <div
      class="ec-smart-table-heading__actions"
    >
      <div>
        Header Actions
      </div>
    </div>
  </div>
</div>
`;

exports[`EcSmartTableHeading should render given filter slot 1`] = `
<div>
  <div
    class="ec-smart-table-heading-title"
  >
    Random Title
  </div>
   
  <div
    class="ec-smart-table-heading"
  >
    <div
      class="ec-smart-table-heading__filter"
    >
      <div>
        Custom filter
      </div>
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`EcSmartTableHeading should render given header-actions slot 1`] = `
<div>
  <div
    class="ec-smart-table-heading-title"
  >
    Random Title
  </div>
   
  <div
    class="ec-smart-table-heading"
  >
    <!---->
     
    <div
      class="ec-smart-table-heading__actions"
    >
      <div>
        Header Actions
      </div>
    </div>
  </div>
</div>
`;

exports[`EcSmartTableHeading should render properly 1`] = `
<div>
  <div
    class="ec-smart-table-heading-title"
  >
    Random Title
  </div>
   
  <!---->
</div>
`;
